--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "license": "MIT",
   "dependencies": {
     "next": "^12.1.10",
+    "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "prop-types": "15.7.2"
+    "sqlite": "^5.1.1"
   },
   "engines": {
     "node": ">=18.x"
-  },
-  "devDependencies": {}
+  }
 }
