--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sqlite": "^5.1.1"
+    "sqlite": "^5.1.1",
+    "swr": "^2.2.5"
   },
   "engines": {
     "node": ">=18.x"
