--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "TeleportHQ",
   "license": "MIT",
   "dependencies": {
+    "basic-auth": "^2.0.1",
     "next": "^12.1.10",
     "prop-types": "15.7.2",
     "react": "^17.0.2",
