--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prop-types": "15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "swr": "^2.2.5"
   },
   "engines": {
